--- a/app/src/main/res/layout/activity_readdata.xml
+++ b/app/src/main/res/layout/activity_readdata.xml
@@ -69,12 +69,12 @@
 
     </LinearLayout>
 
-<!--    <Button-->
-<!--        android:id="@+id/btnupdate"-->
-<!--        android:layout_width="fill_parent"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:text="Update" />-->
+    <Button
+        android:id="@+id/btnupdate"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:text="Update" />
 
     <!--    <LinearLayout-->
 <!--        android:layout_width="wrap_content"-->
